fix spacing on most popular

--- a/styles/recommendations.css
+++ b/styles/recommendations.css
@@ -1,6 +1,6 @@
 #recommendations {
   display: grid;
-  grid-template-columns: [left] 3fr [middle] 1fr [right];
+  grid-template-columns: [left] 5fr [middle] 2fr [right];
   grid-template-rows: 2fr;
   grid-gap: 40px;
   margin-bottom: 80px;
